--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Grunt Setup</title>
+  <script src="public/javascripts/new_file.js"></script>
 </head>
 <body>
   <h1>Grunt it</h1>
